--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -10,7 +10,7 @@ compiler:
 dotenv: .env
 
 networks:
-    default: mainnet-fork
+    default: bc4p-mainnet
     rinkeby:
      eth_usd_price_feed: "0x8A753747A1Fa494EC906cE90E9f37563A8AF630e"
      verify: False
@@ -37,6 +37,10 @@ networks:
     mainnet-fork:
       eth_usd_price_feed: "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419"
       eurs: "0xdB25f211AB05b1c97D595516F45794528a807ad8"
+      verify: False
+    bc4p-mainnet:
+      eth_usd_price_feed: "0x"
+      eurs: "0x"
       verify: False
 
     
