--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -39,8 +39,11 @@ networks:
       eurs: "0xdB25f211AB05b1c97D595516F45794528a807ad8"
       verify: False
     bc4p-mainnet:
-      eth_usd_price_feed: "0x"
-      eurs: "0x"
+      eth_usd_price_feed: "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419"
+      chainid: "123321"
+      host: "https://bc4p.nowum.fh-aachen.de/blockchain"
+      eurs: "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419"
+      explorer: "https://bc4p.nowum.fh-aachen.de/explorer/api"
       verify: False
 
     
